--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'docs/glai'
+          path: 'docs/gguf_modeldb'
 
       - name: Deploy to GitHub Pages
         id: deployment
